--- a/Source/Mosa.UnitTest.Collection.xUnit/CallFixture.tt
+++ b/Source/Mosa.UnitTest.Collection.xUnit/CallFixture.tt
@@ -13,8 +13,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 		<# foreach (KeyValuePair<string, string> number in IntegersWithChar) { #>
 
 		[Theory]
-		[MemberData("<#= number.Value #>", DisableDiscoveryEnumeration = true)]
-
+		[MemberData(nameof(<#= number.Value #>), DisableDiscoveryEnumeration = true)]
 		public void Call<#= number.Value #>(<#= number.Key #> a)
 		{
 			Assert.True(Run<bool>("Mosa.UnitTest.Collection.CallTests.Call<#= number.Value #>", a));
