--- a/Source/Mosa.UnitTest.Collection.xUnit/LdlocaFixture.tt
+++ b/Source/Mosa.UnitTest.Collection.xUnit/LdlocaFixture.tt
@@ -13,7 +13,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 		<# foreach (KeyValuePair<string, string> number in NumbersWithChar) { #>
 
 		[Theory]
-		[MemberData("<#= number.Value #>", DisableDiscoveryEnumeration = true)]
+		[MemberData(nameof(<#= number.Value #>), DisableDiscoveryEnumeration = true)]
 		public void LdlocaCheckValue<#= number.Value #>(<#= number.Key #> a)
 		{
 			Assert.Equal(Mosa.UnitTest.Collection.LdlocaTests.LdlocaCheckValue<#= number.Value #>(a), Run<bool>("Mosa.UnitTest.Collection.LdlocaTests.LdlocaCheckValue<#= number.Value #>", a));
