--- a/Source/Mosa.UnitTest.Collection.xUnit/SwitchFixture.tt
+++ b/Source/Mosa.UnitTest.Collection.xUnit/SwitchFixture.tt
@@ -10,7 +10,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 	<# foreach (KeyValuePair<string, string> number in NegativeIntegers) { #>
 
 		[Theory]
-		[MemberData("<#= number.Value #>", DisableDiscoveryEnumeration = true)]
+		[MemberData(nameof(<#= number.Value #>), DisableDiscoveryEnumeration = true)]
 		public void Switch<#= number.Value #>(<#= number.Key #> a)
 		{
 			Assert.Equal(Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>(a), Run<<#= number.Key #>>("Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>", a));
@@ -19,7 +19,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 	<# foreach (KeyValuePair<string, string> number in PositiveIntegers) { #>
 
 		[Theory]
-		[MemberData("<#= number.Value #>", DisableDiscoveryEnumeration = true)]
+		[MemberData(nameof(<#= number.Value #>), DisableDiscoveryEnumeration = true)]
 		public void Switch<#= number.Value #>(<#= number.Key #> a)
 		{
 			Assert.Equal(Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>(a), Run<<#= number.Key #>>("Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>", a));
