--- a/Source/Mosa.Compiler.Framework/IR/IRInstructions.tt
+++ b/Source/Mosa.Compiler.Framework/IR/IRInstructions.tt
@@ -1,7 +1,7 @@
 ﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".cs" #>
-<#@include file="DynamicJsonConverter.ttinclude" #>
-<#@include file="MultipleOutputHelper.ttinclude" #>
+<#@include file="..\..\Templates\DynamicJsonConverter.ttinclude" #>
+<#@include file="..\..\Templates\MultipleOutputHelper.ttinclude" #>
 <#@ assembly name="Microsoft.CSharp" #>
 
 <# var manager = Manager.Create(Host, GenerationEnvironment); #> 
@@ -13,7 +13,7 @@
 <# manager.EndBlock(); #>
 <#
 var path = System.IO.Path.GetFullPath(Host.TemplateFile+"\\..\\");
-var json = File.ReadAllText(path+"\\"+"IRInstruction.json");
+var json = File.ReadAllText(path+"\\"+"IRInstructions.json");
 
 var jss = new JavaScriptSerializer();
 jss.RegisterConverters(new JavaScriptConverter[] { new DynamicJsonConverter() });
@@ -36,7 +36,7 @@ namespace Mosa.Compiler.Framework.IR
 	public sealed class <#= entry.name #> : BaseIRInstruction
 	{
 		public <#= entry.name #>()
-			: base(<#= entry.resultCount #>, <#= entry.operandCount #>)
+			: base(<#= entry.operandCount #>, <#= entry.resultCount #>)
 		{
 		}
 <# if (entry.flowControl!="Next") { #>
