--- a/Source/Mosa.Platform.x86/X86InstructionMap.tt
+++ b/Source/Mosa.Platform.x86/X86InstructionMap.tt
@@ -25,9 +25,9 @@ jss.RegisterConverters(new JavaScriptConverter[] { new DynamicJsonConverter() })
 
 dynamic entries = jss.Deserialize(json, typeof(object)) as dynamic;
 
-foreach (var entry in entries.instructions) {
+foreach (var entry in entries.Instructions) {
 #>
-			{ "<#= entry.name #>", X86.<#= entry.name #> },
+			{ "<#= entry.Name #>", X86.<#= entry.Name #> },
 <# } #>
 		};
 	}
