--- a/Source/Mosa.Platform.x86/Instructions/X86instruction.tt
+++ b/Source/Mosa.Platform.x86/Instructions/X86instruction.tt
@@ -81,7 +81,7 @@ namespace Mosa.Platform.x86.Instructions
 
 <# } #>
 <# if (entry.X86LegacyOpcode != null) { #>
-		private static readonly LegacyOpCode legacyOpcode = new LegacyOpCode(new byte[] { <#= legacy #><#= reg #> });
+		private static readonly LegacyOpCode legacyOpcode = new LegacyOpCode(new byte[] { <#= legacy #> } <#= reg #>);
 
 <# } #>
 		public <#= entry.Name #>()
@@ -143,7 +143,7 @@ namespace Mosa.Platform.x86.Instructions
 			emitter.Write(opcode);
 		}
 <# } #>
-<# if (entry.legacyOpcode != null && entry.StaticEmitMethod == null){ #>
+<# if (entry.StaticEmitMethod == null && entry.X86LegacyOpcode != null){ #>
 
 		internal override void EmitLegacy(InstructionNode node, X86CodeEmitter emitter)
 		{
@@ -151,21 +151,27 @@ namespace Mosa.Platform.x86.Instructions
 			emitter.Emit(legacyOpcode, node.Result, node.Operand2);
 		}
 <# } #>
-<# if (entry.StaticEmitMethod != null && entry.legacyOpcode == null){ #>
+<# if (entry.StaticEmitMethod != null){ #>
 
 		public override void Emit(InstructionNode node, BaseCodeEmitter emitter)
 		{
 			<#= entry.StaticEmitMethod #>(node, emitter);
 		}
 <# } #>
+<# if (entry.X86EmitBytes != null || entry.X86LegacyOpcode != null || entry.StaticEmitMethod != null) { #>
 
+		// The following is used by the code automation generator.
+<# } #>
 <# if (entry.X86EmitBytes != null) { #>
+
 		public override byte[] __opcode { get { return opcode; } }
 <# } #>
 <# if (entry.X86LegacyOpcode != null) { #>
+
 		public override LegacyOpCode __legacyopcode { get { return legacyOpcode; } }
 <# } #>
 <# if (entry.StaticEmitMethod != null) { #>
+
 		public override string __staticEmitMethod { get { return "<#= entry.StaticEmitMethod #>"; } }
 <# } #>
 	}
