--- a/Source/Mosa.Platform.x86/Instructions/X86instruction.tt
+++ b/Source/Mosa.Platform.x86/Instructions/X86instruction.tt
@@ -41,7 +41,7 @@ namespace Mosa.Platform.x86.Instructions
 <# } #>
 	/// </summary>
 	/// <seealso cref="Mosa.Platform.x86.X86Instruction" />
-	public sealed partial class <#= entry.Name #> : X86Instruction
+	public sealed class <#= entry.Name #> : X86Instruction
 	{
 <#
 		bool first = true;
@@ -77,11 +77,11 @@ namespace Mosa.Platform.x86.Instructions
 			reg = reg+ ", 0x" + entry.X86LegacyOpcodeRegField;
 #>
 <# if (entry.X86EmitBytes != null) { #>
-		private static readonly byte[] opcode = new byte[] { <#= bytes #> };
+		public static readonly byte[] opcode = new byte[] { <#= bytes #> };
 
 <# } #>
 <# if (entry.X86LegacyOpcode != null) { #>
-		private static readonly LegacyOpCode legacyOpcode = new LegacyOpCode(new byte[] { <#= legacy #> } <#= reg #>);
+		public static readonly LegacyOpCode LegacyOpcode = new LegacyOpCode(new byte[] { <#= legacy #> } <#= reg #>);
 
 <# } #>
 		public <#= entry.Name #>()
@@ -114,7 +114,7 @@ namespace Mosa.Platform.x86.Instructions
 <# } #>
 <# if (entry.Commutative  != null && entry.Commutative == "true") { #>
 
-		public override bool Commutative { get { return true; } }
+		public override bool IsCommutative { get { return true; } }
 <# } #>
 <# if (entry.MemoryWrite != null && entry.MemoryWrite == "true") { #>
 
@@ -148,19 +148,19 @@ namespace Mosa.Platform.x86.Instructions
 		internal override void EmitLegacy(InstructionNode node, X86CodeEmitter emitter)
 		{
 			System.Diagnostics.Debug.Assert(node.Result == node.Operand1);
-			emitter.Emit(legacyOpcode, node.Result, node.Operand2);
+			emitter.Emit(LegacyOpcode, node.Result, node.Operand2);
 		}
 <# } #>
 <# if (entry.StaticEmitMethod != null){ #>
 
 		public override void Emit(InstructionNode node, BaseCodeEmitter emitter)
 		{
-			<#= entry.StaticEmitMethod #>(node, emitter);
+			<#= entry.StaticEmitMethod.Replace("%", entry.Name) #>(node, emitter);
 		}
 <# } #>
 <# if (entry.X86EmitBytes != null || entry.X86LegacyOpcode != null || entry.StaticEmitMethod != null) { #>
 
-		// The following is used by the code automation generator.
+		// The following is used by the automated code generator.
 <# } #>
 <# if (entry.X86EmitBytes != null) { #>
 
@@ -168,7 +168,7 @@ namespace Mosa.Platform.x86.Instructions
 <# } #>
 <# if (entry.X86LegacyOpcode != null) { #>
 
-		public override LegacyOpCode __legacyopcode { get { return legacyOpcode; } }
+		public override LegacyOpCode __legacyopcode { get { return LegacyOpcode; } }
 <# } #>
 <# if (entry.StaticEmitMethod != null) { #>
 
