- Moving toward rule based/dynamic code generation for instructions, optimizations, etc.

--- a/Source/Mosa.Platform.x86/Instructions/X86instruction.tt
+++ b/Source/Mosa.Platform.x86/Instructions/X86instruction.tt
@@ -144,9 +144,11 @@ namespace Mosa.Platform.x86.Instructions
 
 		public override void Emit(InstructionNode node, BaseCodeEmitter emitter)
 		{
-			System.Diagnostics.Debug.Assert(node.ResultCount == DefaultResultCount || VariableOperands);
-			System.Diagnostics.Debug.Assert(node.OperandCount == DefaultOperandCount || VariableOperands);
+<# if (entry.VariableOperands == null || entry.VariableOperands == "false") { #>
+			System.Diagnostics.Debug.Assert(node.ResultCount == DefaultResultCount);
+			System.Diagnostics.Debug.Assert(node.OperandCount == DefaultOperandCount);
 
+<# } #>
 			emitter.Write(opcode);
 		}
 <# } #>
@@ -154,9 +156,11 @@ namespace Mosa.Platform.x86.Instructions
 
 		internal override void EmitLegacy(InstructionNode node, X86CodeEmitter emitter)
 		{
-			System.Diagnostics.Debug.Assert(node.ResultCount == DefaultResultCount || VariableOperands);
-			System.Diagnostics.Debug.Assert(node.OperandCount == DefaultOperandCount || VariableOperands);
+<# if (entry.VariableOperands == null || entry.VariableOperands == "false") { #>
+			System.Diagnostics.Debug.Assert(node.ResultCount == DefaultResultCount);
+			System.Diagnostics.Debug.Assert(node.OperandCount == DefaultOperandCount);
 
+<# } #>
 			System.Diagnostics.Debug.Assert(node.Result == node.Operand1);
 			emitter.Emit(LegacyOpcode, node.Result, node.Operand2);
 		}
@@ -165,9 +169,11 @@ namespace Mosa.Platform.x86.Instructions
 
 		public override void Emit(InstructionNode node, BaseCodeEmitter emitter)
 		{
-			System.Diagnostics.Debug.Assert(node.ResultCount == DefaultResultCount || VariableOperands);
-			System.Diagnostics.Debug.Assert(node.OperandCount == DefaultOperandCount || VariableOperands);
+<# if (entry.VariableOperands == null || entry.VariableOperands == "false") { #>
+			System.Diagnostics.Debug.Assert(node.ResultCount == DefaultResultCount);
+			System.Diagnostics.Debug.Assert(node.OperandCount == DefaultOperandCount);
 
+<# } #>
 			<#= entry.StaticEmitMethod.Replace("%", entry.Name) #>(node, emitter);
 		}
 <# } #>
