--- a/Source/Mosa.Platform.x86/Instructions/X86Instructions.tt
+++ b/Source/Mosa.Platform.x86/Instructions/X86Instructions.tt
@@ -81,7 +81,7 @@ namespace Mosa.Platform.x86.Instructions
 			reg = ", 0x" + entry.X86LegacyOpcodeRegField.Replace("0x",string.Empty);
 
 		string operands = string.Empty;
-		if (entry.X86LegacyOpcodeOperandOrder != null)
+		if (!string.IsNullOrWhiteSpace(entry.X86LegacyOpcodeOperandOrder))
 		{
 			var sb = new StringBuilder();
 
@@ -214,7 +214,11 @@ namespace Mosa.Platform.x86.Instructions
 <# } #>
 
 <# } #>
+<# if (operands == "") { #>
+			emitter.Emit(LegacyOpcode);
+<# } else { #>
 			emitter.Emit(LegacyOpcode, <#= operands #>);
+<# } #>
 		}
 <# } #>
 <# if (entry.X86EmitBytes != null || entry.X86LegacyOpcode != null || entry.StaticEmitMethod != null) { #>
