--- a/Source/Mosa.UnitTest.Collection/EnumTests.tt
+++ b/Source/Mosa.UnitTest.Collection/EnumTests.tt
@@ -7,7 +7,8 @@ namespace Mosa.UnitTest.Collection
 	foreach (KeyValuePair<string, string> numberT in isSigned ? NegativeIntegers : PositiveIntegers) {
 		string enumType = "Enum" + numberT.Value;
 		string valueType = numberT.Key;
-#>	enum <#= enumType #> : <#= valueType #> {
+#>	enum <#= enumType #>Type : <#= valueType #>
+	{
 <# if (isSigned) {
 #>		Negative51 = -51,
 		Negative50,
@@ -17,110 +18,143 @@ namespace Mosa.UnitTest.Collection
 		Positive51
 	}
 
-	public static class <#= enumType #>Class {
+	public static class <#= enumType #>
+	{
 <#		List<KeyValuePair<int, string>> numbers = new List<KeyValuePair<int, string>>();
 		numbers.Add(new KeyValuePair<int, string>(50, "Positive"));
 		if (isSigned) numbers.Add(new KeyValuePair<int, string>(-50, "Negative"));
 		foreach (KeyValuePair<int, string> number in numbers) {
 			int value = number.Key;
-			string enumElement = enumType + "." + number.Value + Math.Abs(value).ToString();
+			string enumElement = enumType + "Type." + number.Value + Math.Abs(value).ToString();
 			string enumElementMinusOne = enumType + "." + number.Value + Math.Abs(value-1).ToString();
 			string enumElementPlusOne = enumType + "." + number.Value + Math.Abs(value+1).ToString();
 
-#>		public static bool <#= number.Value #>Conversion() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value #> == (<#= valueType #>)e;
+#>		public static <#= valueType #> <#= number.Value #>Conversion()
+		{
+			return (<#= valueType #>)<#= enumElement #>;
 		}
-		public static bool <#= number.Value #>PlusOne1() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value + 1 #> == (<#= valueType #>)(e + 1);
+
+		public static <#= valueType #> <#= number.Value #>PlusOne1()
+		{
+			return (<#= valueType #>)(<#= enumElement #> + 1);
 		}
-		public static bool <#= number.Value #>PlusOne2() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= enumElementPlusOne #> == e + 1;
+
+		public static <#= valueType #> <#= number.Value #>PlusOne2()
+		{
+			return (<#= valueType #>)(<#= enumElement #> + 2);
 		}
-		public static bool <#= number.Value #>MinusOne1() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value - 1 #> == (<#= valueType #>)(e - 1);
+
+		public static <#= valueType #> <#= number.Value #>MinusOne1()
+		{
+			return (<#= valueType #>)(<#= enumElement #> - 1);
 		}
-		public static bool <#= number.Value #>MinusOne2() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= enumElementMinusOne #> == e - 1;
+
+		public static <#= valueType #> <#= number.Value #>MinusOne2()
+		{
+			return (<#= valueType #>)(<#= enumElement #> - 2);
 		}
-		public static bool <#= number.Value #>Shl() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value << 1 #> == (<#= valueType #>)e << 1;
+
+		public static <#= valueType #> <#= number.Value #>Shl()
+		{
+			return (<#= valueType #>)<#= enumElement #> << 1;
 		}
-		public static bool <#= number.Value #>Shr() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value >> 1 #> == (<#= valueType #>)e >> 1;
+
+		public static <#= valueType #> <#= number.Value #>Shr()
+		{
+			return (<#= valueType #>)<#= enumElement #> >> 1;
 		}
-		public static bool <#= number.Value #>Mul2() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value * 2 #> == (<#= valueType #>)e * 2;
+
+		public static <#= valueType #> <#= number.Value #>Mul2()
+		{
+			return  (<#= valueType #>)<#= enumElement #> * 2;
 		}
-		public static bool <#= number.Value #>Div2() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value / 2 #> == (<#= valueType #>)e / 2;
+
+		public static <#= valueType #> <#= number.Value #>Div2()
+		{
+			return (<#= valueType #>)<#= enumElement #> / 2;
 		}
-		public static bool <#= number.Value #>Rem2() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value % 2 #> == (<#= valueType #>)e % 2;
+
+		public static <#= valueType #> <#= number.Value #>Rem2()
+		{
+			return (<#= valueType #>)<#= enumElement #> % 2;
 		}
-		public static bool <#= number.Value #>AssignPlusOne() {
-			<#= enumType #> e = <#= enumElement #>;
+
+		public static <#= valueType #> <#= number.Value #>AssignPlusOne()
+		{
+			var e = <#= enumElement #>;
 			e += 1;
-			return <#= value + 1 #> == (<#= valueType #>)e;
+			return (<#= valueType #>)e;
 		}
-		public static bool <#= number.Value #>AssignMinusOne() {
-			<#= enumType #> e = <#= enumElement #>;
+
+		public static <#= valueType #> <#= number.Value #>AssignMinusOne()
+		{
+			var e = <#= enumElement #>;
 			e -= 1;
-			return <#= value - 1 #> == (<#= valueType #>)e;
+			return (<#= valueType #>)e;
 		}
-		public static bool <#= number.Value #>Preincrement() {
-			<#= enumType #> e = <#= enumElement #>;
-			bool retval = <#= value + 1 #> == (<#= valueType #>)(++e);
-			return retval && <#= value + 1 #> == (<#= valueType #>)e;
+
+		public static <#= valueType #> <#= number.Value #>Preincrement()
+		{
+			var e = <#= enumElement #>;
+			++e;
+			return (<#= valueType #>)(e);
 		}
-		public static bool <#= number.Value #>Predecrement() {
-			<#= enumType #> e = <#= enumElement #>;
-			bool retval = <#= value - 1 #> == (<#= valueType #>)(--e);
-			return retval && <#= value - 1 #> == (<#= valueType #>)e;
+
+		public static <#= valueType #> <#= number.Value #>Predecrement()
+		{
+			var e = <#= enumElement #>;
+			--e;
+			return (<#= valueType #>)(e);
 		}
-		public static bool <#= number.Value #>Postincrement() {
-			<#= enumType #> e = <#= enumElement #>;
-			bool retval = <#= value #> == (<#= valueType #>)(e++);
-			return retval && <#= value + 1 #> == (<#= valueType #>)e;
+
+		public static <#= valueType #> <#= number.Value #>Postincrement()
+		{
+			var e = <#= enumElement #>;
+			e++;
+			return (<#= valueType #>)(e);
 		}
-		public static bool <#= number.Value #>Postdecrement() {
-			<#= enumType #> e = <#= enumElement #>;
-			bool retval = <#= value #> == (<#= valueType #>)(e--);
-			return retval && <#= value - 1 #> == (<#= valueType #>)e;
+
+		public static <#= valueType #> <#= number.Value #>Postdecrement()
+		{
+			var e = <#= enumElement #>;
+			e--;
+			return (<#= valueType #>)(e);
 		}
-		public static bool <#= number.Value #>And() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value & 0xFF #> == ((<#= valueType #>)e & 0xFF);
+
+		public static <#= valueType #> <#= number.Value #>And()
+		{
+			return (<#= valueType #>)<#= enumElement #> & 0xF;
 		}
-		public static bool <#= number.Value #>Or() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value | 1#> == ((<#= valueType #>)e | 1);
+
+		public static <#= valueType #> <#= number.Value #>Or()
+		{
+			return (<#= valueType #>)<#= enumElement #> | 1;
 		}
-		public static bool <#= number.Value #>XOr() {
-			<#= enumType #> e = <#= enumElement #>;
-			return <#= value ^ 1#> == ((<#= valueType #>)e ^ 1);
+
+		public static <#= valueType #> <#= number.Value #>XOr()
+		{
+			return (<#= valueType #>)<#= enumElement #> ^ 1;
 		}
-<#			foreach (KeyValuePair<string, string> comparison in Comparisons) {
-#>		private static bool _<#= number.Value #><#= comparison.Value #>(<#= enumType #> e, <#= valueType #> v) {
+
+<#			foreach (KeyValuePair<string, string> comparison in Comparisons)
+		{
+#>		private static bool Internal<#= number.Value #><#= comparison.Value #>(<#= enumType #>Type e, <#= valueType #> v) {
 			return (<#= valueType #>)e <#= comparison.Key #> v;
 		}
-		public static bool <#= number.Value #><#= comparison.Value #>1() {
-			return (<#= value #> <#= comparison.Key #> <#= value #>) == _<#= number.Value #><#= comparison.Value #>(<#= enumElement #>, <#= value #>);
+
+		public static bool <#= number.Value #><#= comparison.Value #>1()
+		{
+			return Internal<#= number.Value #><#= comparison.Value #>(<#= enumElement #>, <#= value #>);
 		}
-		public static bool <#= number.Value #><#= comparison.Value #>2() {
-			return (<#= value #> <#= comparison.Key #> <#= value+1 #>) == _<#= number.Value #><#= comparison.Value #>(<#= enumElement #>, <#= value+1 #>);
+
+		public static bool <#= number.Value #><#= comparison.Value #>2()
+		{
+			return Internal<#= number.Value #><#= comparison.Value #>(<#= enumElement #>, <#= value+1 #>);
 		}
-		public static bool <#= number.Value #><#= comparison.Value #>3() {
-			return (<#= value #> <#= comparison.Key #> <#= value-1 #>) == _<#= number.Value #><#= comparison.Value #>(<#= enumElement #>, <#= value-1 #>);
+
+		public static bool <#= number.Value #><#= comparison.Value #>3()
+		{
+			return Internal<#= number.Value #><#= comparison.Value #>(<#= enumElement #>, <#= value-1 #>);
 		}
 
 <#			}
